--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a href="https://www.linkedin.com/in/gonzalogiambagno/"><img class="h-10 align-center" src="./img/logoLinkdn.png" alt="linkedin"></a>
         </div>
         <div class="absolute bottom-0 right-0">
-            <img  class="h-0 2xl:h-60 lg:h-48 md:h-36 " src="./img/Logo grande.png" alt="">
+            <img  class="h-0 2xl:h-60 lg:h-48 md:h-36 " src="./img/Logo grande.png" alt="rickandmorty">
         </div>
     </footer>
 
